tests/errors/read_error_01.f90
program read_error_01
    implicit none
    integer :: i
    read *, i
end program read_error_01
